fix: removed header as it was broken on mobile

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     padding: 0;
 }
 
-header {
+/* header {
     background-color: #191919;
     margin: 0;
     padding: 0;
@@ -25,11 +25,11 @@ header p {
     font-size: 14px;
 
     margin: 0;
-    padding: 10px;
+    padding: 4px;
 
     display: inline;
     float: right;
-}
+} */
 
 /* header h2 {
     background-color: #1c1c1c;
